Added spacing between album titles and names, and added deatils for each album

--- a/vesen-site/vesen-discography.html
+++ b/vesen-site/vesen-discography.html
@@ -25,6 +25,7 @@
         <section class="album">
             <h3 class="title">Sleep Paralysis</h3>
             <a href="https://open.spotify.com/album/2liRaVQwmUJr187bQNOAg0?si=B_rzIYS3QpeNR4VBWT5ULQ" target="_blank"><img src="images/sleep_paralysis.jpeg" alt="sleep paralysis album art" id="sleep-paralysis-art"></a>
+            <p class="desc">2023 - 9 songs - 36 min</p>
         </section>
     </main>
     <footer>
