--- a/vesen-site/08breezy-discography.html
+++ b/vesen-site/08breezy-discography.html
@@ -26,66 +26,77 @@
             <div class="album-details">
                 <h3 class="title">Lotus Sun</h3>
                 <a href="https://flamingovapor.bandcamp.com/album/lotus-sun" target="_blank"><img src="images/lotus-sun.jpeg" alt="lotus sun album art" class="album-art"></a>
+                <p class="desc">2020 - 9 songs - 41 min</p>
             </div>
         </section>
         <section class="album">
             <div class="album-details">
                 <h3 class="title">Demon of the Dreams</h3>
                 <a href="https://nightmaremedley.bandcamp.com/album/demon-of-the-dreams" target="_blank"><img src="images/dotd.jpeg" alt="demon of the dreams album art" class="album-art"></a>
+                <p class="desc">2020 - 3 songs - 1 hr 1 min</p>
             </div>
         </section>
         <section class="album">
             <div class="album-details">
                 <h3 class="title">Grove</h3>
                 <a href="https://open.spotify.com/album/1w5ocDemMDaZpXekVB6w45?si=rYN8viLsQm-OGie1jYjQ7Q" target="_blank"><img src="images/grove.jpeg" alt="grove album art" class="album-art"></a>
+                <p class="desc">2020 - 10 songs - 59 min</p>
             </div>
         </section>
         <section class="album">
             <div class="album-details">
                 <h3 class="title">Primordia</h3>
                 <a href="https://open.spotify.com/album/2cg9qUJG1HXC7qMx4mAMtj?si=trJXQjKxRYGGQLrVAlLORg" target="_blank"><img src="images/primorida.jpeg" alt="primordia album art" class="album-art"></a>
+                <p class="desc">2020 - 9 songs - 44 min</p>
             </div>
         </section>
         <section class="album">
             <div class="album-details">
                 <h3 class="title">You're Alone</h3>
                 <a href="https://08breezy.bandcamp.com/album/youre-alone" target="_blank"><img src="images/youre-alone.jpeg" alt="you're alone album art" class="album-art"></a>
+                <p class="desc">2019 - 4 songs - 18 min</p>
             </div>
         </section>
         <section class="album">
             <div class="album-details">
                 <h3 class="title">I Can't Help Being In Love With You</h3>
                 <a href="https://flamingovapor.bandcamp.com/album/i-cant-help-being-in-love-with-you" target="_blank"><img src="images/ichbilwy.jpeg" alt="I Can't Help Being In Love With You album art" class="album-art"></a>
+                <p class="white" >2019 - 8 songs - 24 min</p>
             </div>
         </section>
         <section class="album">
             <div class="album-details">
                 <h3 class="title">JOYA</h3>
                 <a href="https://seasidetapes.bandcamp.com/album/joya" target="_blank"><img src="images/joya.jpeg" alt="joya album art" class="album-art"></a>
+                <p class="desc">2018 - 3 songs - 30 min</p>
             </div>
         </section>
         <section class="album">
             <div class="album-details">
                 <h3 class="title">The Lost</h3>
                 <a href="https://nightmaremedley.bandcamp.com/album/the-lost" target="_blank"><img src="images/the-lost.jpeg" alt="the lost album art" class="album-art"></a>
+                <p class="desc">2018 - 8 songs - 47 min</p>
             </div>
         </section>
         <section class="album">
             <div class="album-details">
                 <h3 class="title">Spirits</h3>
                 <a href="https://nightlighttapes.bandcamp.com/album/spirits" target="_blank"><img src="images/spirits.jpeg" alt="spirits album art" class="album-art"></a>
+                <p class="desc">2018 - 4 songs - 31 min</p>
             </div>
         </section>
         <section class="album">
             <div class="album-details">
                 <h3 class="title">我ら</h3>
                 <a href="https://flamingovapor.bandcamp.com/album/--21" target="_blank"><img src="images/we.jpeg" alt="we album art" class="album-art"></a>
+                <p class="white">2018 - 6 songs - 37 min</p>
             </div>
         </section>
         <section class="album">
             <div class="album-details">
                 <h3 class="title">夜​の​恐​怖</h3>
                 <a href="https://08breezy.bandcamp.com/album/-" target="_blank"><img src="images/fotn.jpeg" alt="fear of the night album art" class="album-art"></a>
+                <p class="desc">2017 - 5 songs - 39 min</p>
             </div>
         </section>
     </main>
