--- a/vesen-site/vesen-discography.html
+++ b/vesen-site/vesen-discography.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="containter">
-            <img src="images/logo.png" alt="logo" class="logo">
+            <a href="index.html"><img src="images/logo.png" alt="logo" class="logo"></a>
             <nav>
                 <a href="index.html" class="nav">Home</a>
                 <a href="vesen-discography.html" class="nav">Vesen</a>
